--- a/03-installation-and-setup/Taskfile.yaml
+++ b/03-installation-and-setup/Taskfile.yaml
@@ -1,10 +1,10 @@
 version: "3"
 
 env:
-  CLUSTER_NAME: devops-directive-kubernetes-course
+  CLUSTER_NAME: devops-directive-kubernetes-tutorial
   CIVO_REGION: NYC1
-  GCP_REGION: us-central1
-  GCP_ZONE: us-central1-a
+  GCP_REGION: asia-south1
+  GCP_ZONE: asia-south1-a
   # Set default gum style options
   BORDER: double
   BORDER_FOREGROUND: "212"
@@ -134,7 +134,7 @@ tasks:
   gcp:06-create-cluster:
     desc: "Create GKE cluster"
     vars:
-      GCP_PROJECT_ID: kubernetes-course-424917
+      GCP_PROJECT_ID: fyp-console-469011
     cmds:
       - |
         gcloud container clusters create ${CLUSTER_NAME} \
