--- a/07-deploying-demo-application/api-golang/IngressRoute.yaml
+++ b/07-deploying-demo-application/api-golang/IngressRoute.yaml
@@ -8,7 +8,7 @@ spec:
     - web
   routes:
     - kind: Rule
-      match: Host(`kubernetes-course.devopsdirective.com`) && PathPrefix(`/api/golang`)
+      match: PathPrefix(`/api/golang`)
       middlewares:
         - name: strip-api-prefixes
       services:
