--- a/07-deploying-demo-application/client-react/IngressRoute.yaml
+++ b/07-deploying-demo-application/client-react/IngressRoute.yaml
@@ -8,7 +8,7 @@ spec:
     - web
   routes:
     - kind: Rule
-      match: Host(`kubernetes-course.devopsdirective.com`)
+      match: PathPrefix(`/`)
       services:
         - kind: Service
           name: client-react-nginx
